# python-performance-test

./: .cursorrules  .gitignore  README.md  benchmark.py  example_benchmark.py  pyproject.toml  setup-gitbash.sh  setup.bat
requirements/: base.txt  requirements-3.13.txt  requirements-3.14-threadfree.txt  requirements-3.14.txt
tests/: __init__.py  base_test.py  exception_test.py  fibonacci_test.py  function_call_test.py  list_comprehension_test.py  multithread_test.py  object_test.py  sorting_test.py
