[project]
name = "python-performance-test"
version = "0.1.0"
description = "Comprehensive benchmarking suite for Python performance testing across versions 3.13, 3.14, and 3.14 threadfree"
authors = [
    {name = "Performance Testing Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.60.0",
    "psutil>=5.9.0",
    "matplotlib>=3.5.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
